{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 21,
  "lineage": "c18d954f-730f-6af7-3fba-24e4397f1d50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tutorial_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5d15b2b4132fa28",
            "arn": "arn:aws:ec2:ap-south-1:919537457388:elastic-ip/eipalloc-0a5d15b2b4132fa28",
            "association_id": "eipassoc-0e348f1062592f7c3",
            "domain": "vpc",
            "id": "eipalloc-0a5d15b2b4132fa28",
            "instance": "i-02e083fd2a0d15bb9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02afa55c8a6ca6fc4",
            "private_dns": "ip-10-0-1-36.ap-south-1.compute.internal",
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-13-126-162-141.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.162.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tutorial_web_eip_0"
            },
            "tags_all": {
              "Name": "tutorial_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tutorial_web",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tutorial_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0287a05f0ef0e9d9a",
            "arn": "arn:aws:ec2:ap-south-1:919537457388:instance/i-02e083fd2a0d15bb9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e083fd2a0d15bb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Admin-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02afa55c8a6ca6fc4",
            "private_dns": "ip-10-0-1-36.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-13-126-162-141.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.162.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04818f69019743bd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05049372a6b1e2274",
            "tags": {
              "Name": "tutorial_web_0"
            },
            "tags_all": {
              "Name": "tutorial_web_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c72a5f6a0c69afd5"
            ]
          },
          "dependencies": [
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tutorial_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:internet-gateway/igw-0939aa82e2d9c7c0b",
            "id": "igw-0939aa82e2d9c7c0b",
            "owner_id": "919537457388",
            "tags": {
              "Name": "tutorial_igw"
            },
            "tags_all": {
              "Name": "tutorial_igw"
            },
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:route-table/rtb-0a1a5d351d470bfb7",
            "id": "rtb-0a1a5d351d470bfb7",
            "owner_id": "919537457388",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:route-table/rtb-06892fe71a68e1b4f",
            "id": "rtb-06892fe71a68e1b4f",
            "owner_id": "919537457388",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0939aa82e2d9c7c0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e25581e4e54832",
            "route_table_id": "rtb-0a1a5d351d470bfb7",
            "subnet_id": "subnet-0465a20a364f0447a"
          },
          "dependencies": [
            "aws_route_table.tutorial_private_rt",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9b3f15712de1d3",
            "route_table_id": "rtb-0a1a5d351d470bfb7",
            "subnet_id": "subnet-08448be6956fabf9d"
          },
          "dependencies": [
            "aws_route_table.tutorial_private_rt",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c136bec205dbc12d",
            "route_table_id": "rtb-06892fe71a68e1b4f",
            "subnet_id": "subnet-05049372a6b1e2274"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_public_rt",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:security-group/sg-002dc2708a187a27b",
            "description": "Security group for tutorial databases",
            "egress": [],
            "id": "sg-002dc2708a187a27b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c72a5f6a0c69afd5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tutorial_db_sg",
            "name_prefix": "",
            "owner_id": "919537457388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial_db_sg"
            },
            "tags_all": {
              "Name": "tutorial_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tutorial_web_sg",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:security-group/sg-0c72a5f6a0c69afd5",
            "description": "Security group for tutorial web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c72a5f6a0c69afd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tutorial_web_sg",
            "name_prefix": "",
            "owner_id": "919537457388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial_web_sg"
            },
            "tags_all": {
              "Name": "tutorial_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:subnet/subnet-0465a20a364f0447a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0465a20a364f0447a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919537457388",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_private_subnet_0"
            },
            "tags_all": {
              "Name": "tutorial_private_subnet_0"
            },
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:subnet/subnet-08448be6956fabf9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08448be6956fabf9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919537457388",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_private_subnet_1"
            },
            "tags_all": {
              "Name": "tutorial_private_subnet_1"
            },
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:subnet/subnet-05049372a6b1e2274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05049372a6b1e2274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919537457388",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_public_subnet_0"
            },
            "tags_all": {
              "Name": "tutorial_public_subnet_0"
            },
            "vpc_id": "vpc-06d86cd70eb264470"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tutorial_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919537457388:vpc/vpc-06d86cd70eb264470",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035bf9bf13272748d",
            "default_route_table_id": "rtb-0da6c76457616687c",
            "default_security_group_id": "sg-0267645b83e855fa4",
            "dhcp_options_id": "dopt-09520fb3384204204",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d86cd70eb264470",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da6c76457616687c",
            "owner_id": "919537457388",
            "tags": {
              "Name": "tutorial_vpc"
            },
            "tags_all": {
              "Name": "tutorial_vpc"
            }
          }
        }
      ]
    }
  ]
}